# Laptop-Momentum

./: .env.example  .gitattributes  .gitignore  README.md  main.py  pyproject.toml
.github/workflows/: check-streak.yml
app/: activity_monitor.py  activity_scorer.py  autostart_manager.py  config.py  database.py  input_tracker.py  lifeline_manager.py  notification_manager.py  phone_notifier.py  points_manager.py  sound_manager.py  streak_manager.py
app/ui/: dashboard.py  tray.py
